[package]
name = "arxiv_mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "1.1", features = ["server"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
urlencoding = "2"
thiserror = "2"
tracing = "0.1"

[profile.release]
strip = true
